// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blank renders a blank option 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-activedescendant="id_option_blank"
      aria-controls="id_listbox"
      aria-readonly="true"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Please select…
    </div>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="dropdown__option dropdown__option--focused"
        id="id_option_blank"
        role="option"
        tabindex="-1"
      >
        <div>
          Please select…
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        <div>
          Apple
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        <div>
          Banana
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        <div>
          Orange
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`options as array of objects disabled sets the aria-disabled attribute 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-activedescendant="id_option_apple"
      aria-controls="id_listbox"
      aria-expanded="true"
      aria-readonly="true"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      class="dropdown__listbox"
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="dropdown__option dropdown__option--focused"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        <div>
          Apple
        </div>
      </li>
      <li
        aria-disabled="true"
        class="dropdown__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        <div>
          Banana
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`options as array of objects group renders grouped options 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-activedescendant="id_option_apple"
      aria-controls="id_listbox"
      aria-readonly="true"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="dropdown__option dropdown__option--focused"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        <div>
          Apple
        </div>
      </li>
      <li
        aria-hidden="true"
        class="dropdown__group"
        id="id_group_citrus"
      >
        Citrus
      </li>
      <li
        class="dropdown__option dropdown__option--grouped"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        <div
          aria-labelledby="id_group_citrus id_option_orange_label"
          id="id_option_orange_label"
        >
          Orange
        </div>
      </li>
      <li
        class="dropdown__option dropdown__option--grouped"
        id="id_option_lemon"
        role="option"
        tabindex="-1"
      >
        <div
          aria-labelledby="id_group_citrus id_option_lemon_label"
          id="id_option_lemon_label"
        >
          Lemon
        </div>
      </li>
      <li
        aria-hidden="true"
        class="dropdown__group"
        id="id_group_berry"
      >
        Berry
      </li>
      <li
        class="dropdown__option dropdown__option--grouped"
        id="id_option_raspberry"
        role="option"
        tabindex="-1"
      >
        <div
          aria-labelledby="id_group_berry id_option_raspberry_label"
          id="id_option_raspberry_label"
        >
          Raspberry
        </div>
      </li>
      <li
        class="dropdown__option dropdown__option--grouped"
        id="id_option_strawberry"
        role="option"
        tabindex="-1"
      >
        <div
          aria-labelledby="id_group_berry id_option_strawberry_label"
          id="id_option_strawberry_label"
        >
          Strawberry
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`options as array of objects label renders a closed drop down 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-activedescendant="id_option_apple"
      aria-controls="id_listbox"
      aria-readonly="true"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="dropdown__option dropdown__option--focused"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        <div>
          Apple
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        <div>
          Banana
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        <div>
          Orange
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`options empty options renders an empty combo box 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-readonly="true"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    />
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`options options as array of numbers renders a closed drop down 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-activedescendant="id_option_1"
      aria-controls="id_listbox"
      aria-readonly="true"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      1
    </div>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="dropdown__option dropdown__option--focused"
        id="id_option_1"
        role="option"
        tabindex="-1"
      >
        <div>
          1
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_2"
        role="option"
        tabindex="-1"
      >
        <div>
          2
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_3"
        role="option"
        tabindex="-1"
      >
        <div>
          3
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`options options as array of strings renders a closed drop down 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-activedescendant="id_option_apple"
      aria-controls="id_listbox"
      aria-readonly="true"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="dropdown__option dropdown__option--focused"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        <div>
          Apple
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        <div>
          Banana
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        <div>
          Orange
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`options updating options updates the options 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-activedescendant="id_option_strawberry"
      aria-controls="id_listbox"
      aria-expanded="true"
      aria-readonly="true"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Strawberry
    </div>
    <ul
      class="dropdown__listbox"
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="dropdown__option dropdown__option--focused"
        id="id_option_strawberry"
        role="option"
        tabindex="-1"
      >
        <div>
          Strawberry
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_raspberry"
        role="option"
        tabindex="-1"
      >
        <div>
          Raspberry
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        <div>
          Banana
        </div>
      </li>
    </ul>
  </div>
</div>
`;
